src/main/kotlin/com/example/demongodb/global/error/exception/ErrorProperty.kt
package com.example.demongodb.global.error.exception

interface ErrorProperty {
    fun status(): Int
    fun message(): String
}